cealdemo/tests/neg1/146.gold
Error: (line 4:1 'include') Include function 'abc' is not defined, file '146a.inc'
