cealdemo/tests/neg1/146.sct
.pragma N=77
.include "146a.inc"

